--- a/_includes/presets.css
+++ b/_includes/presets.css
@@ -1,6 +1,6 @@
 body, html {
 	height: 100vh;
-	width: 100vw;
+	width: 100%;
 	margin: 0;
 	padding: 0;
 }
